--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -17,25 +17,34 @@ button {
 #demo-login-modal{
     display: flex;
     justify-content: center;
-
+    height: 150px;
+    width: 450px;
+    border-radius: 3px;
 }
 
 .demo-login-button{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    height:50px;
     cursor: pointer;
     font-style: italic;
-    background-color: #fff;
-    border: 1px solid #d5d9d9;
+    background-color: pink;
+    border: 2px solid pink;
     box-shadow: rgb(213 217 217 / 50%) 0 2px 5px 0;
     box-sizing: border-box;
-    color: #0f1111;
+    color: white;
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 20px;
     padding: 0 10px 0 11px;
     position: relative;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    box-shadow: 2px 3px 8px #9095A1;
 }
 
 .hamburger-menu{
@@ -54,8 +63,71 @@ button {
     margin-right: 30px;
     margin-top: 10px;
     align-items: center;
+
 }
 
 .main-login-button:hover{
     box-shadow: 1px 1px 1px 1px black;
+}
+
+.loginTitle {
+    margin-left: 70px;
+}
+
+.loginInput {
+    border: none;
+    font-size: 17px;
+	border-bottom: 0.1em solid black;
+	height: 2em;
+	width: 20em;
+	margin-left: 10px;
+    margin-bottom: 30px;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.loginInput:focus {
+	border: none;
+	outline: none;
+	border-bottom: 0.1em solid black;
+	height: 2em;
+	margin-right: 1%;
+	margin-bottom: 10%;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.login-btn {
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    height:50px;
+    width:100px;
+    margin-left: 130px;
+    background-color: teal;
+    box-shadow: 2px 3px 8px #9095A1;
+    border: 1px solid skyblue;
+    cursor:pointer
+}
+
+.login-btn:hover {
+    font-size: 14px;
+    background-color: blue;
+	color: white;
+    border: 1px solid skyblue;
+    height:50px;
+    width: 100px;
+	border-radius: 8px;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.demo-login-button:hover {
+    font-size: 16px;
+    background-color:red;
+	color: white;
+    border: 1px solid skyblue;
+    height:50px;
+    width: 155px;
+	border-radius: 8px;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
