--- a/frontend/src/components/Questions/questions.css
+++ b/frontend/src/components/Questions/questions.css
@@ -1,1 +1,117 @@
+.edit-form-page {
+    background-color: aliceblue;
+    height: 1060px;
+    display:flex;
+    align-items: center;
+}
 
+.editform-container {
+    display:inline-block;
+    align-items: center;
+    margin-top: 80px;
+    margin-left:500px;
+    width:1200px;
+}
+
+.question-title {
+    margin-top: -200px;;
+    font-size: 60px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.question-description {
+    font-size: 30px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.editdelete-question-container {
+    display: flex;
+    margin-top: -20px;;
+}
+
+.editquestion-btn {
+    display:flex;
+    font-size: 18px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 100px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: teal;
+    box-shadow: 2px 3px 8px #9095A1;
+    border-radius: 8px;
+}
+
+.editquestion-btn:hover {
+    background-color: blue;
+	color: white;
+    border: 1px solid skyblue;
+    height:60px;
+    width: 100px;
+	border-radius: 8px;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.deletequestion-btn {
+    display:flex;
+    font-size: 18px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 100px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: rgb(225, 22, 99);
+    box-shadow: 2px 3px 8px #9095A1;
+    border-radius: 8px;
+}
+
+.deletequestion-btn:hover {
+    display:flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 100px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: rgb(167, 0, 0);
+    box-shadow: 2px 3px 8px #9095A1;
+    border-radius: 8px;
+}
+
+.provide-answer {
+    display:flex;
+    font-size: 18px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 140px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: rgb(2, 134, 210);
+    box-shadow: 2px 3px 8px #9095A1;
+    border-radius: 8px;
+    margin-bottom: 30px;
+}
+
+.provide-answer:hover {
+    cursor: pointer;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: rgb(75, 0, 167);
+    box-shadow: 2px 3px 8px #9095A1;
+    border-radius: 8px;
+}
+
+
+.answersList {
+    background-color: white;
+    border-radius: 1em;
+    box-shadow: 0 0 8px #9095A1;
+    padding: 1em;
+    margin-bottom: 20px;
+    margin-left: -50px;
+    margin-right:100px;
+    font-size: 30px;
+    text-decoration: none
+}
