--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,3 +7,36 @@
     margin-top: 4px;
     border-radius: 12px;
 }
+
+
+.logout-btn {
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    height:50px;
+    width:100px;
+    margin-left: 20px;
+    background-color: teal;
+    box-shadow: 2px 3px 8px #9095A1;
+    border: 1px solid skyblue;
+    margin-right: 20px;
+}
+
+.logout-btn:hover {
+    font-size: 14px;
+    cursor:pointer;
+    background-color: dodgerblue;
+	color: white;
+    border: 1px solid skyblue;
+    height:50px;
+    width: 100px;
+	border-radius: 8px;
+	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+
+.profile-dropdown {
+    list-style: none;
+}
