--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -23,7 +23,8 @@
     margin-top:-100px;
     font-size: 40px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    margin-top:20px
 }
 
 
